--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,251 @@
 h1 {
-  background-color: lightblue;
+  background-color: black;
+  color: white;
+}
+
+.Center{
+  text-align:center;
+  align: middle;
+}
+
+#title{
+  font-size: 5vw;
+}
+
+#myMsg{
+  font-size: 1.5vw;
+}
+
+#SegDisplay{
+  width: 40%;
+  height: 40%;
+  margin: 10% auto;
+}
+
+/**
+* Quarter Circles
+*/
+
+.main {
+  position: relative;
+  width: 30vw;
+  height: 30vw;
+  margin: 0 auto;
+}
+.quarter {
   position: absolute;
+  width: 50%;
+  height: 50%;
+  transition: background-color 0.2s ease-in-out;
+  z-index: 1;
+}
+.quarter-hover{
+  cursor: pointer;
+}
+@media (max-width: 360px){
+  .main{
+    width: 90vw;
+    height: 90vw;
+  }
+  #title{
+  font-size: 15vw;
+  }
+  .toggle--neon {
+		& .toggle--btn {
+			font-size: 3vw !important;
+    }
+  }
+}
+@media (max-width: 980px) and (min-width: 361px){
+  .main{
+    width: 60vw;
+    height: 60vw;
+  }
+  #title{
+  font-size: 10vw;
+  }
+  .toggle--neon {
+		& .toggle--btn {
+			font-size: 3vw !important;
+    }
+  }
+}
+.quarter-light {
+  	opacity: 0.3;
+}
+.quarter1 {
+  top: 0;
+  left: 0;
+  background-color: red;
+  border-radius: 100% 0 0 0;
+}
+.quarter2 {
+  top: 0;
+  right: 0;
+  background-color: blue;
+  border-radius: 0 100% 0 0;
+}
+.quarter3 {
+  bottom: 0;
+  left: 0;
+  background-color: orange;
+  border-radius: 0 0 0 100%;
+}
+.quarter4 {
+  bottom: 0;
+  right: 0;
+  background-color: green;
+  border-radius: 0 0 100% 0;
+}
+.cutout {
+  width: 50%;
+  height: 50%;
+  background-color: white;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  border-radius: 50%;
+  border: 3px solid #000;
+  z-index: 2;
+}
+
+/* =====================================================
+   Some defaults across all toggle demos
+   ===================================================== */
+
+.toggle {
+	display: block;
+	text-align: center;
+	margin-top: 20px;
+  user-select: none;
+}
+	.toggle--checkbox {
+    display: none;
+	}
+	.toggle--btn {
+		display: block;
+		margin: 0 auto;
+		transition: all 350ms ease-in;
+
+		&:hover {
+			cursor: pointer;
+		}
+	}
+
+	.toggle--btn,
+	.toggle--checkbox,
+	.toggle--feature {
+		&,
+		&:before,
+		&:after {
+			transition: all 250ms ease-in;
+		}
+		&:before,
+		&:after {
+			content: '';
+			display: block;
+		}
+	}
+
+/* ======================================================
+   Neon toggle
+   ====================================================== */
+
+	/*@keyframes neon {
+	  0% {
+	    text-shadow: 0 0 10px red,
+	               0 0 15px  red,
+	               0 0 25px  red,
+	               0 0 40px  #FF9900,
+	               0 0 70px  #FF9900,
+	               0 0 90px  #FF9900,
+	               0 0 90px  #FF9900;
+	  }
+	  100% {
+	    text-shadow: 0 0 5px red,
+	               0 0 10px red,
+	               0 0 15px red,
+	               0 0 20px #FF9900,
+	               0 0 35px #FF9900,
+	               0 0 40px #FF9900,
+	               0 0 50px #FF9900;
+	  }
+	}*/
+
+	$textColor--active: red;
+	$textColor--inactive: WhiteSmoke;
+
+
+	.toggle--neon {
+
+		width: 100%;
+    height: 5%;
+    margin-top: -10%;
+    margin-left: -1%;
+    //width: 3vw;
+    position: static;
+		& .toggle--btn {
+			font-family: Audiowide;
+			text-transform: uppercase;
+			font-size: 0.6vw;
+			color: $textColor--inactive;
+
+			// text-shadow: -1px -1px 1px #111, 1px 1px 1px #444;
+
+			text-shadow: 0 0 10px transparent,
+	               0 0 15px  transparent,
+	               0 0 25px  transparent,
+	               0 0 40px  transparent,
+	               0 0 70px  transparent,
+	               0 0 90px  transparent,
+	               0 0 90px  transparent;
+
+			&:before,
+			&:after {
+				display: inline-block;
+				margin: 0 5px;
+				transition: all 220ms ease-in-out;
+			}
+
+			&:before {
+				content: attr(data-label-off);
+				animation: neon 1.5s ease-in-out infinite alternate;
+				animation-delay: 90ms;
+				color: $textColor--active;
+			}
+			&:after {
+				content: attr(data-label-on);
+			}
+		}
+
+		& .toggle--checkbox {
+			&:checked {
+				& + .toggle--btn {
+					&:before {
+						animation: none;
+						color: $textColor--inactive;
+					}
+					&:after {
+						animation: neon 1.5s ease-in-out infinite alternate;
+						animation-delay: 90ms;
+						color: $textColor--active;
+					}
+				}
+			}
+		}
+	}
+
+.btn-circle {
+  width: 3vw;
+  height: 3vw;
+  text-align: center;
+  padding: 6px 0;
+  line-height: 1.428571429;
+  border-radius: 4vw;
+  font-size: 0.75vw;
+  margin-top: 2vw;
+}
+#divUserMsg{
+  display:inline-block;
+  margin-top:20px;
 }
