--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+body {
+  background-color: black;
+}
+
+
 h1 {
   background-color: black;
   color: white;
@@ -21,10 +26,6 @@ h1 {
   height: 40%;
   margin: 10% auto;
 }
-
-/**
-* Quarter Circles
-*/
 
 .main {
   position: relative;
@@ -147,7 +148,7 @@ h1 {
 		}
 	}
 
-/* ======================================================
+ /*======================================================
    Neon toggle
    ====================================================== */
 
